dootask/deploy/dootask-approve.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-approve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-approve
  template:
    metadata:
      labels:
        app: dootask-approve
    spec:
      containers:
      - name: approve
        image: kuaifan/dooapprove:0.1.5
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-approve
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dootask-approve
