dootask/deploy/dootask-drawio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-drawio
  template:
    metadata:
      labels:
        app: dootask-drawio
    spec:
      containers:
      - name: drawio-webapp
        image: hub.hitosea.com/dootask/drawio:0.0.1

      - name: drawio-export
        image: hub.hitosea.com/dootask/export-server:0.0.1

---
apiVersion: v1
kind: Service
metadata:
  name: dootask-drawio
spec:
  ports:
  - name: webapp
    port: 8080
    targetPort: 8080
  - name: export
    port: 8000
    targetPort: 8000
  selector:
    app: dootask-drawio
