dootask/deploy/dootask-face.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-face
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-face
  template:
    metadata:
      labels:
        app: dootask-face
    spec:
      containers:
      - name: face
        image: hitosea2020/dooface:0.0.1
        ports:
        - containerPort: 7788
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-face
spec:
  ports:
  - port: 7788
    name: http
  selector:
    app: dootask-face
