dootask/deploy/dootask-fileview.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-fileview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-fileview
  template:
    metadata:
      labels:
        app: dootask-fileview
    spec:
      containers:
      - name: fileview
        image: kuaifan/fileview:4.2.0-SNAPSHOT-RC25
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-fileview
spec:
  ports:
  - port: 8012
    targetPort: 8012
  selector:
    app: dootask-fileview
