dootask/deploy/dootask-minder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-minder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-minder
  template:
    metadata:
      labels:
        app: dootask-minder
    spec:
      containers:
      - name: minder
        image: kuaifan/minder:0.1.3
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-minder
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dootask-minder
