dootask/deploy/dootask-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-nginx
  template:
    metadata:
      labels:
        app: dootask-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: app-data
          mountPath: /etc/nginx/conf.d
          subPath: nginx/conf.d
        - name: app-data
          mountPath: /var/www/public
          subPath: www/public
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: dootask-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    name: https
  selector:
    app: dootask-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: dootask-nginx
