dootask/deploy/dootask-okr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-okr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-okr
  template:
    metadata:
      labels:
        app: dootask-okr
    spec:
      containers:
      - name: okr
        image: kuaifan/doookr:0.4.5
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-okr
spec:
  ports:
  - port: 5566
    targetPort: 5566
  selector:
    app: dootask-okr
