dootask/deploy/dootask-php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-php
  template:
    metadata:
      labels:
        app: dootask-php
    spec:
      containers:
      - name: php
        image: kuaifan/php:swoole-8.0.rc18
        volumeMounts:
        - name: app-data
          mountPath: /var/www
          subPath: www
        - name: app-data
          mountPath: /etc/supervisor/conf.d/
          subPath: supervisor/conf.d/
        - name: app-data
          mountPath: /var/log/supervisor
          subPath: supervisor/log
        - name: app-data
          mountPath: /usr/local/etc/php/php.ini
          subPath: php/php.ini
        - name: env-config
          mountPath: /var/www/.env
          subPath: .env
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: dootask-app-pvc
      - name: env-config
        configMap:
          name: dootask-env-config
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-php
spec:
  ports:
  - port: 20000
    name: http
  selector:
    app: dootask-php
