dootask/deploy/mariadb.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dootask-mariadb
spec:
  serviceName: dootask-mariadb
  replicas: 1
  selector:
    matchLabels:
      app: dootask-mariadb
  template:
    metadata:
      labels:
        app: dootask-mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.7.3
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: dbconfig
          mountPath: /etc/mysql/conf.d/my.conf
          subPath: my.conf
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data-pvc
        - name: dbconfig
          configMap:
            name: dootask-config
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-mariadb
spec:
  ports:
  - port: 3306
  selector:
    app: dootask-mariadb
