dootask/deploy/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-redis
  template:
    metadata:
      labels:
        app: dootask-redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-redis
spec:
  ports:
  - port: 6379
  selector:
    app: dootask-redis
