dootask/deploy/services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-office
  template:
    metadata:
      labels:
        app: dootask-office
    spec:
      containers:
      - name: office
        image: onlyoffice/documentserver:8.2.2.1
        volumeMounts:
        - name: app-data
          mountPath: /var/log/onlyoffice
          subPath: office/logs
        - name: app-data
          mountPath: /var/www/onlyoffice/Data
          subPath: office/data
        - name: app-data
          mountPath: /var/www/onlyoffice/documentserver/web-apps/vendor/requirejs/require.js
          subPath: office/resources/require.js
        - name: app-data
          mountPath: /var/www/onlyoffice/documentserver/web-apps/apps/common/main/resources/img/header
          subPath: office/resources/common/main/resources/img/header
        - name: app-data
          mountPath: /var/www/onlyoffice/documentserver/web-apps/apps/documenteditor/main/resources/css/app.css
          subPath: office/resources/documenteditor/main/resources/css/app.css
        - name: app-data
          mountPath: /var/www/onlyoffice/documentserver/web-apps/apps/documenteditor/mobile/css/526.caf35c11a8d72ca5ac85.css
          subPath: office/resources/documenteditor/mobile/css/526.caf35c11a8d72ca5ac85.css
        - name: app-data
          mountPath: /var/www/onlyoffice/documentserver/web-apps/apps/presentationeditor/main/resources/css/app.css
          subPath: office/resources/presentationeditor/main/resources/css/app.css
        - name: app-data
          mountPath: /var/www/onlyoffice/documentserver/web-apps/apps/presentationeditor/mobile/css/923.f9cf19de1a25c2e7bf8b.css
          subPath: office/resources/presentationeditor/mobile/css/923.f9cf19de1a25c2e7bf8b.css
        - name: app-data
          mountPath: /var/www/onlyoffice/documentserver/web-apps/apps/spreadsheeteditor/main/resources/css/app.css
          subPath: office/resources/spreadsheeteditor/main/resources/css/app.css
        - name: app-data
          mountPath: /var/www/onlyoffice/documentserver/web-apps/apps/spreadsheeteditor/mobile/css/611.1bef49f175e18fc085db.css
          subPath: office/resources/spreadsheeteditor/mobile/css/611.1bef49f175e18fc085db.css
      - name: office-logs
        image: busybox
        command: ["/bin/sh", "-c"]
        args:
        - |
          tail -F /var/log/onlyoffice/*.log 2>/dev/null || true
        volumeMounts:
        - name: app-data
          mountPath: /var/log/onlyoffice
          subPath: office
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: dootask-app-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-fileview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-fileview
  template:
    metadata:
      labels:
        app: dootask-fileview
    spec:
      containers:
      - name: fileview
        image: kuaifan/fileview:4.2.0-SNAPSHOT-RC25
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-drawio
  template:
    metadata:
      labels:
        app: dootask-drawio
    spec:
      containers:
      - name: drawio-webapp
        image: jgraph/drawio:24.7.17
        volumeMounts:
        - name: app-data
          mountPath: /usr/local/tomcat/webapps/draw/index.html
          subPath: drawio/webapp/index.html
        - name: app-data
          mountPath: /usr/local/tomcat/webapps/draw/stencils
          subPath: drawio/webapp/stencils
        - name: app-data
          mountPath: /usr/local/tomcat/webapps/draw/js/app.min.js
          subPath: drawio/webapp/js/app.min.js
        - name: app-data
          mountPath: /usr/local/tomcat/webapps/draw/js/croppie/croppie.min.css
          subPath: drawio/webapp/js/croppie/croppie.min.css
        - name: app-data
          mountPath: /usr/local/tomcat/webapps/draw/js/diagramly/ElectronApp.js
          subPath: drawio/webapp/js/diagramly/ElectronApp.js
      - name: drawio-export
        image: kuaifan/export-server:0.0.1
        volumeMounts:
        - name: app-data
          mountPath: /usr/share/fonts/drawio
          subPath: drawio/export/fonts
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: dootask-app-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-minder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-minder
  template:
    metadata:
      labels:
        app: dootask-minder
    spec:
      containers:
      - name: minder
        image: kuaifan/minder:0.1.3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-approve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-approve
  template:
    metadata:
      labels:
        app: dootask-approve
    spec:
      containers:
      - name: approve
        image: kuaifan/dooapprove:0.1.5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-ai
  template:
    metadata:
      labels:
        app: dootask-ai
    spec:
      containers:
      - name: ai
        image: kuaifan/dootask-ai:0.2.6
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-okr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-okr
  template:
    metadata:
      labels:
        app: dootask-okr
    spec:
      containers:
      - name: okr
        image: kuaifan/doookr:0.4.5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-face
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-face
  template:
    metadata:
      labels:
        app: dootask-face
    spec:
      containers:
      - name: face
        image: hitosea2020/dooface:0.0.1
        ports:
        - containerPort: 7788
---
# Services
apiVersion: v1
kind: Service
metadata:
  name: dootask-office
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dootask-office
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-fileview
spec:
  ports:
  - port: 8012
    targetPort: 8012
  selector:
    app: dootask-fileview
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-drawio
spec:
  ports:
  - name: webapp
    port: 8080
    targetPort: 8080
  - name: export
    port: 8000
    targetPort: 8000
  selector:
    app: dootask-drawio
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-minder
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dootask-minder
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-approve
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dootask-approve
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-ai
spec:
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: dootask-ai
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-okr
spec:
  ports:
  - port: 5566
    targetPort: 5566
  selector:
    app: dootask-okr
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-php
spec:
  ports:
  - port: 20000
    name: http
  selector:
    app: dootask-php
---
apiVersion: v1
kind: Service
metadata:
  name: dootask-face
spec:
  ports:
  - port: 7788
    name: http
  selector:
    app: dootask-face
