dootask/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_ID}.dootask.top
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  # tls:
  #   - hosts:
  #       - ${APP_ID}.dootask.top
  #     secretName: dootask.top
  rules:
    - host: ${APP_ID}.dootask.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dootask-nginx
                port:
                  number: 80
